<resources>
    <string name="app_name">Movie Catalogue V5</string>

    <string name="porster_movie">Poster Movies</string>
    <string name="title_movie">Movies</string>

    <string name="porster_tv">Poster Tv</string>
    <string name="title_tv">TV</string>
    <string name="item_favorite">Favorite</string>
    <string name="item_description">Descripiton....</string>
    <string name="item_name">Title.....</string>
    <string name="error_toast">Ops something is wrong when try to show movie</string>
    <string name="title_activity_detail_item">detail_item</string>
    <string name="action_settings">Settings</string>
    <string name="date">Date</string>
    <string name="title_favorite">Favorite</string>
    <string name="text">TextView....</string>
    <string name="test">Test...</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="rating">Rating...</string>
    <string name="description">Description...</string>
    <string name="status">Status</string>
    <string name="search_title">Search...</string>
    <string name="appwidget_text">My Favorite</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>


    <string name="daily_reminder_message">Hey,are you busy? lets find you favorite movie and tv</string>
    <string name="daily_reminder_title">We miss you :(</string>

    <string name="daily_reminder_setting_title">Daily Reminder</string>
    <string name="daily_reminder_setting_desc">Make sure to you not miss all best movie</string>

    <string name="daily_release_setting_title">Daily Movie Release</string>
    <string name="daily_release_setting_desc">Informed you what release movies today</string>

    <string name="action_change_settings">Notifications Setting</string>




</resources>
