<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.bagus.moviecataloguev5.ui.movies.MovieFragment"
        android:label="@string/title_movie" />

    <fragment
        android:id="@+id/navigation_tv"
        android:name="com.bagus.moviecataloguev5.ui.tv.TvFragment"
        android:label="@string/title_tv" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.bagus.moviecataloguev5.ui.favorite.FavoriteFragment"
        android:label="@string/item_favorite" />
</navigation>